Start of dark mode implementation // Fixing Css properties

--- a/src/assets/css/custom.scss
+++ b/src/assets/css/custom.scss
@@ -1,12 +1,30 @@
 @use '~bootstrap/scss/bootstrap.scss';
+@use './darkmode.scss';
 
-.body{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif, 'Playfair Display', serif;
+    font-size: 1rem;
+    font-weight: 300;
+    line-height: 1.5;
+    text-align: left;
     box-sizing: inherit;
-    position: relative;
-    background-color: #fafafa;
     overflow-y: scroll;
     overflow-x: hidden;
+}
+
+// Basic light mode style
+.light {
+    width: 100%;
+    height: 100%;
+    color :#282f36;
+    background-color: #fff;
 }
 
 /* ---------------  Navbar ---------------  */
@@ -80,9 +98,9 @@
 
 .info-first-section {
     position: absolute;
-    top: 52%;
+    top: 50%;
     left: 10%;
-    padding: 5px;
+    padding: 10px 20px;
     background-color: rgba(250, 250, 250, 0.4);
 
     .heading-1{
@@ -218,7 +236,8 @@
     padding-bottom: 150px;
     font-weight: 700;
     list-style: none;
-    position: absolute;
+    position: absolute;   
+    z-index: 3;
 }
   
 .vos-envies-section .navigation-item {
@@ -260,7 +279,6 @@
     position: fixed;
     display: flex;
     justify-content: center;
-    z-index: -3;
 }
 
 .project-preview-1, .project-preview-2, .project-preview-3{
@@ -288,14 +306,14 @@
 
 /* ---------------  HomePage Réservation-Section ---------------  */
 .reservation-section {
-    padding-bottom: 80px;
+    padding-bottom: 180px;
     margin-top: 80px;
     min-height: 160vh;
     height: auto;
 }
 
-.container-reservation{
-    padding-top: 65px;
+.container-reservation {
+    padding-top: 200px;
 }
 
 .heading-2-reservation {
@@ -523,6 +541,8 @@
 /* ---------------  Faq Page ---------------  */
 .faq-section {
     padding-top: 25vh;
+    width: 100vw;
+    height: 100vh;
  }
  
  .faq-section .btn-link {
@@ -539,6 +559,10 @@
 
  .faq-section .card-header {
    background-color: rgb(0 125 252 / 4%);
+ }
+
+ #accordion {
+     height: 100%;
  }
 
 /* ---------------  Blog Page ---------------  */
